RESOLVED FIXED145248
Fix the !ENABLE(ES6_TEMPLATE_LITERAL_SYNTAX) build after r184337
https://bugs.webkit.org/show_bug.cgi?id=145248
Summary Fix the !ENABLE(ES6_TEMPLATE_LITERAL_SYNTAX) build after r184337
Csaba Osztrogonác
Reported 2015-05-21 02:13:30 PDT
http://trac.webkit.org/changeset/184337 didn't add the necessary ifdef guards everywhere, so !ENABLE(ES6_TEMPLATE_LITERAL_SYNTAX) build is broken now and should be fixed. build log: ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.h:506:60: error: 'TaggedTemplateNode' has not been declared ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2811:71: error: 'TaggedTemplateNode' has not been declared ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2816:5: error: 'TemplateStringListNode' was not declared in this scope ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2816:29: error: 'templateString' was not declared in this scope ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2816:62: error: request for member 'templateLiteral' in '* taggedTemplate', which is of non-class type 'int' ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2835:98: error: request for member 'divot' in '* taggedTemplate', which is of non-class type 'int' ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2835:123: error: request for member 'divotStart' in '* taggedTemplate', which is of non-class type 'int' ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2835:153: error: request for member 'divotEnd' in '* taggedTemplate', which is of non-class type 'int' ../../Source/JavaScriptCore/bytecompiler/BytecodeGenerator.cpp:2836:1: error: control reaches end of non-void function [-Werror=return-type] .... and a log failure in Parser.cpp
Attachments
Patch (3.84 KB, patch)
2015-05-21 02:18 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-05-21 02:18:36 PDT
Yusuke Suzuki
Comment 2 2015-05-21 02:33:57 PDT
Comment on attachment 253511 [details] Patch Built with -DENABLE_ES6_TEMPLATE_LITERAL_SYNTAX=OFF and the patch works. Thank you for your fix.
WebKit Commit Bot
Comment 3 2015-05-21 05:29:52 PDT
Comment on attachment 253511 [details] Patch Clearing flags on attachment: 253511 Committed r184713: <http://trac.webkit.org/changeset/184713>
WebKit Commit Bot
Comment 4 2015-05-21 05:29:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.