Fix the !ENABLE(ES6_TEMPLATE_LITERAL_SYNTAX) build after r184337 https://bugs.webkit.org/show_bug.cgi?id=145248

Reviewed by Yusuke Suzuki.

* bytecompiler/BytecodeGenerator.cpp:
* bytecompiler/BytecodeGenerator.h:
* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseMemberExpression):


Canonical link: https://commits.webkit.org/163276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184713 268f45cc-cd09-0410-ab3c-d52691b4dbfc